--- a/css/jobs.css
+++ b/css/jobs.css
@@ -17,7 +17,7 @@ outline: none !important;
     padding: 8px auto;
     border-radius: 20px;
     box-shadow: 2px 2px 4px rgb(231, 231, 231);
-    margin: 5px 0;
+    margin: 15px 0;
   }
   #jobs .panel-heading{
     background-color: rgba(148, 212, 43, 0.3);
@@ -39,6 +39,9 @@ outline: none !important;
   #jobs p{
     color: #889c80; 
     float: right;
+    margin-top: 40px;
+    margin-left: 40px;
+    text-align: center;
   }
   
  #jobs button{
@@ -79,5 +82,8 @@ outline: none !important;
     z-index: 0;
   }
   .modal-content {
+    margin-top: 100px;
     text-decoration: none !important;
+    height: 250px;
+    width: 600px;
  }
