latest jobs page update

--- a/css/jobs.css
+++ b/css/jobs.css
@@ -13,15 +13,16 @@ outline: none !important;
 }
 
 #jobs .panel{
-    height: 150px;
+  height: 200px;
     padding: 8px auto;
     border-radius: 20px;
     box-shadow: 2px 2px 4px rgb(231, 231, 231);
     margin: 15px 0;
+    width: 70%;
   }
   #jobs .panel-heading{
     background-color: rgba(148, 212, 43, 0.3);
-    width: 50%;
+    width: 70%;
     padding-bottom: 10px;
     border:none;
   box-shadow: 0 0 4px 4px rgba(148, 212, 43, 0.3); 
@@ -53,7 +54,7 @@ outline: none !important;
     text-align: center;
     transition: all 0.5s;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 40px;
     outline: none;
   }
   #jobs button span{
@@ -87,3 +88,69 @@ outline: none !important;
     height: 250px;
     width: 600px;
  }
+
+ /* cv submit form */
+ #mybtn{
+  width: 300px;
+  height: 60px;
+  /* margin: 40px 0 30px 80px; */
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: rgba(99, 185, 31, 0.9);
+  border-color: #ccced0;
+  float: right;
+}
+#mybtn:hover,
+#mybtn:focus{
+  background-color: #4f8437;
+  box-shadow: 2px 2px 4px 6px rgba(243, 239, 239, 0.9);
+  border: none;
+  color: rgba(124, 210, 56, 0.9);
+}
+#myform{
+  display: none;
+  width: 350px;
+  border-radius: 20px;
+  background: rgba(191, 199, 186, 0.2);
+  float: right;
+  margin-right: -20px;
+}
+input:focus {
+  outline: none;
+}	
+#myform div{
+  margin: 5px 10px;
+    width: 300px;
+    color: #68c317;
+    font-weight: bold;
+}
+#myform label{
+  color: #8a8787;
+  font-size: 16px;
+  font-weight: bold;
+}
+#datepicker{
+  width: 400px;
+  border-radius: 5px;
+}
+option{
+  background-color: rgba(134, 191, 67, 0.9);
+  color: #fff;
+}
+option:hover,
+option:focus{
+  background-color: #fff;
+  color: #76bb26;
+}
+#file{
+  background-color: #edf1ed;
+}
+#submit{
+  color: #fff;
+  background-color: #51a933;
+  border-color: #cdd2d6;
+  margin-left: 20px;
+  width: 80px;
+}
